--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,4 +1,54 @@
-.mainBox__resultBox{
-    display: flex;
+body{
+    background-color: darkgrey;
+}
+.mainBox{
+    display:flex;
     flex-direction: column;
+    flex-basis: 100%;
+    align-items: center;
+}
+
+.mainBox__inputBox{
+    /* border: 1px solid red; */
+    display:flex;
+    flex-direction: column;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+}
+#Input{
+    border: 3px solid black;
+    border-radius: 4px;
+    width: 90%;
+    height: 40px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+}
+#inputButton{
+    border: 2px solid black;
+    padding: 10px 20px 10px 20px;
+    border-radius: 5px;
+}
+
+#mainBox__resultBox{
+    border: 3px solid black;
+    background-color: rgb(235, 235, 235);
+    display:flex;
+    flex-direction: column;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+}
+.resultBox__newitemBox{
+    width: 70%;
+    margin-right: 10%;
+}
+.resultBox__newItem{
+    width: 100%;
+    margin: 10px 0px 10px 0px;
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid black;
 }
