--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -42,6 +42,8 @@ body{
     width: 70%;
 }
 .resultBox__newitemBox{
+    display: flex;
+    /* flex-direction: column; */
     width: 70%;
     margin-right: 10%;
 }
@@ -52,3 +54,16 @@ body{
     border-radius: 5px;
     border: 1px solid black;
 }
+/* Стили кнопок для удаления записей */
+.close {
+    border: 1px solid black;
+    margin: 10px 0px 10px 0px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 5px;
+    background-color: rgb(100, 104, 104);
+  }
+  
+  .close:hover {
+    background-color: grey;
+    color: white;
+  }
