Закончил создание кнопок для отметки о выполнении задачи, кнопки для cохранения изменений

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -63,7 +63,22 @@ body{
     background-color: rgb(100, 104, 104);
   }
   
-  .close:hover {
+.close:hover {
     background-color: grey;
     color: white;
-  }
+}
+
+.completedTask{
+    border: 1px solid black;
+    margin: 10px 0px 10px 0px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 5px;
+    background-color: rgb(172, 52, 16);
+}
+.save{
+    border: 1px solid black;
+    margin: 10px 0px 10px 0px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 5px;
+    background-color: rgb(207, 246, 78);
+}
