--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -25,7 +25,7 @@ body{
     margin-bottom: 10px;
     padding-left: 10px;
 }
-#inputButton{
+.inputButton{
     border: 2px solid black;
     padding: 10px 20px 10px 20px;
     border-radius: 5px;
