--- a/lastone/navbar.css
+++ b/lastone/navbar.css
@@ -64,7 +64,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    margin-top: 92px;
+    margin-top: 170px;
     z-index: 1;
 }
 .dropdown-content a {
@@ -120,6 +120,7 @@
     color: white;
     width: 100%;
     flex-direction: column;
+    flex: 0 0 auto;
 }
 .footer__logoBox{
     width: 30%;
