--- a/lastone/index.css
+++ b/lastone/index.css
@@ -1,20 +1,17 @@
 *{
-    /* border:1px solid black;   */
+/*     border:1px solid black;   */
     font-family:'Arial Narrow';
+    margin: 0;
+    padding: 0;
 }
 body{
-    /* border:1px solid black; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-left: -0.5px;
-    margin-top: -0.5px;
+/*     border:1px solid black; */
+    height: 100%;
 }
 
 /* ======================================================== */
 .body{
+    display: flex;
     flex-direction: column;
     width: 100%;
 }
@@ -98,8 +95,8 @@ body{
 .typeOfWork:hover{
     transform: scale(1.1);
 }
-.typeOfWork__list{
-    align-self: flex-start;
+.typeOfWork__list li{
+    font-size: 14px;
 }
 .typeOfWork h2{
     color: white;
